# protein-transformers

./: Cargo.toml  README.md  main.rs
samplefile/: multi.fasta  sample.fasta  sequence-cluster.txt  sequence-clusters.fasta
src/: args.rs  filestruct.rs  main.rs  similarity.rs
