[package]
name = "identity-kmers"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "sequence similarity based on identity kmers"
homepage = "https://github.com/sciencegenome/sentence-kmer"
repository = "https://github.com/sciencegenome/sentence-kmer"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
